# storage/api-docs/api-docs.json
@@ -57,11 +57,52 @@
                                         "example": "laksamana.arya1412@gmail.com"
                                     },
                                     "password": {
-                                        "type": "password",
+                                        "type": "string",
                                         "example": "1234"
                                     },
                                     "password_confirmation": {
-                                        "type": "password",
+                                        "type": "string",
+                                        "example": "1234"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successfully Register"
+                    },
+                    "201": {
+                        "description": "Successfully Register"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "User Login API's",
+                "operationId": "79b76db35ba369854a54bc016ebaed97",
+                "requestBody": {
+                    "description": "- Login to your account",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "laksamana.arya1412@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
                                         "example": "1234"
                                     }
                                 },
